--- a/index.html
+++ b/index.html
@@ -21,11 +21,10 @@
 
 
 1 курс IT школы Илларионова. 
-        Коротко о себе (на фон в идеале свою фоточку)
+       
 
 
-
-</h5></div></div></div><div class="parallax"><img src="background1.jpg" alt="Unsplashed background img 1"></div></div><div class="container"><div class="section"><div class="row"><div class="col s12 m4"><div class="icon-block"><h2 class="center"><i class="material-icons">person</i></h2><h5 class="center">Обо мне</h5><p class="light">
+</h5></div></div></div><div class="parallax"><img src="бункер.png" alt="Unsplashed background img 1"></div></div><div class="container"><div class="section"><div class="row"><div class="col s12 m4"><div class="icon-block"><h2 class="center"><i class="material-icons">person</i></h2><h5 class="center">Обо мне</h5><p class="light">
 
 
 
