--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
     <div class="carousel-item green white-text formatter" href="#two!"><div class="title-container"><h2>
 
 
-      Название работы 
+      Конфеты
 
     
     </h2><p class="white-text">
@@ -355,7 +355,26 @@
     <div class="sketchfab-embed-wrapper"><iframe width="100%" class="formatter youtube-iframe" src="https://sketchfab.com/models/935a9fb226bd456087b6a7cd88c0e3a5/embed?preload=1" frameborder="0" allow="autoplay; fullscreen; vr" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe></div></div>
     <!-- Тут заканчивается шаблон для Sketchfab -->
 
+ <!-- Отсюда начинается шаблон для Sketchfab -->
+    <div class="carousel-item green white-text formatter" href="#two!"><div class="title-container"><h2>
 
+
+      Кабинет 
+
+    
+    </h2><p class="white-text">
+
+
+  
+      Описание
+
+
+
+      <!-- Чтобы поменять адрес просто замените непонятный набор букв после /models/... на тот что указан в адресной строке после /models/
+        Но ?preload=1 должно остаться! -->
+    </p></div>
+    <div class="sketchfab-embed-wrapper"><iframe width="100%" class="formatter youtube-iframe" src="https://sketchfab.com/models/8170e91c67b74cd086c7fa2f434b69bb/embed?preload=1" frameborder="0" allow="autoplay; fullscreen; vr" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe></div></div>
+    <!-- Тут заканчивается шаблон для Sketchfab -->
 
 
 
