--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 
 
-      10 класс . Люблю комиксы, моделлинг и анимацию    Напишите какой класс, школа, что любите и т.д. 
+      10 класс . Люблю комиксы, моделлинг и анимацию   
 
 
 
@@ -36,7 +36,7 @@
 
 
 
-         Бункер, натюрморт, ролик Напишите о своих работах, что вы сделали
+         Мои работы: Бункер, натюрморт, ролик, кабинет злодея, шкаф и т.д. 
 
 
 
@@ -44,7 +44,7 @@
 
 
 
-          bernly@mail.ru Укажите любые контакты (е-мейл, вк, твиттер, телефон и т.д.) чтобы заказчики могли с вами связаться
+          Мои контакты: bernly@mail.ru 
 
 
 
