--- a/index.html
+++ b/index.html
@@ -319,6 +319,31 @@
 
       " /><div class="carousel-fixed-item center"></div></div>
     <!-- Тут заканчивается шаблон для картинки -->
+          
+          <!-- Отсюда начинается шаблон для картинки -->
+    <div class="carousel-item green white-text" href="#two!"><div class="title-container"><h2>
+
+
+      Название работы DJ
+
+    
+    </h2><p class="white-text">
+
+
+  
+      Описание
+
+
+
+    <!-- Тут просто пишите название картинки когда загрузите ее -->
+    </p></div><img class="image-it" src="
+
+
+      вертушка.jpg
+
+
+      " /><div class="carousel-fixed-item center"></div></div>
+    <!-- Тут заканчивается шаблон для картинки -->
 
 
 
