--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
     </p></div><img class="image-it" src="
 
 
-      вертушка.jpg
+      вертушка.png
 
 
       " /><div class="carousel-fixed-item center"></div></div>
